  from $wgMimeTypeExclusions.
* $wgMaxRedirects has been removed. This feature never worked as intended,
  see T296430.
* $wgElementTiming has been removed. This feature was experimental,
  and disabled by default.
* $wgPriorityHints and $wgPriorityHintsRatio have been removed.
  This feature was experimental, and disabled by default.
* $wgActorTableSchemaMigrationStage has been removed. Migration is over.
* In $wgObjectCaches, globalKeyLB and localKeyLB are no longer supported.
* $wgLegacySchemaConversion - This global configuration has been
  removed because it was unused.
* $wgInterwikiPrefixDisplayTypes - This global configuration has been
  removed because it was unused.
* …

=== New user-facing features in 1.39 ===
* Optional automatic user creation on page save ($wgAutoCreateTempUser)
* Administrators now have the option to delete/undelete the associated "Talk"
  page when they are (un)deleting a given page. `deletetalk` and `undeletetalk`
  options were added to the 'delete' and 'undelete' action APIs in MW 1.38.
* `{{=}}` is now a wikitext built-in magic word, expanding to `=`.  This is
  conventionally used as an escape mechanism to allow the use of `=` in
  unnamed template arguments.  Defining [[Template:=]] to expand to something
  other than `=` has been deprecated since 1.36, with affected pages put into
  a special tracking category for migration.
* (T284020) Bot passwords are now supported when using the REST API.
* …

=== New developer features in 1.39 ===
* Added optional $size param to SearchResultProvideThumbnail hook.
* SearchResultProvideThumbnail hook interface moved from MediaWiki\Rest\Hook
  namespace to MediaWiki\Search\Hook.
* JsonValidateSaveHook has been added to allow extensions to set additional
  pre-save validations for specific JSON pages (T313254)
* Added 'PermissionErrorAudit' hook, enabling extensions to audit permission
  errors on specfic actions. For instance account registration failed attempts
  due to a block (T306018).