@@ -164,13 +164,6 @@ return [
 					);
 				}
 			],
-			[
-				'name' => 'legacy.wikibits.js',
-				'callback' => static function ( Context $context, Config $config ) {
-					return $config->get( MainConfigNames::IncludeLegacyJavaScript ) ?
-						new FilePath( 'legacy.wikibits.js' ) : '';
-				}
-			],
 		],
 		'dependencies' => 'jquery',
 		'targets' => [ 'desktop', 'mobile' ],
